Changed video index to be inline with news and displays correctly on mobile

--- a/app/assets/stylesheets/news.scss
+++ b/app/assets/stylesheets/news.scss
@@ -13,10 +13,6 @@
   height: 420px;
 }
 
-.news-block {
-  height: 144px;
-}
-
 .news-link {
   margin-top: 20px;
   padding-left: 0 !important;
@@ -31,4 +27,7 @@
   height: 80px;
   padding-top: 25px;
   color: white;
+}
+
+.summary {
 }
